--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>miguelsc</title>
+</head>
+<body>
+	<i>Under construction..</i>
+</body>
+</html>
